fix stle bug with caseoverview  - there has been an issue with the height of each view within the  container. Some are cut off and the button is hard to access. Remove  heigh from caseoverview and add max-height  - had height 100% to required sections

--- a/src/scss/helpers/_global.scss
+++ b/src/scss/helpers/_global.scss
@@ -231,3 +231,7 @@ div.cursor-help { cursor: help; }
 .cursor-help {
     cursor: help;
 }
+
+.h100 {
+  height: 100%;
+}
